- fixed 302 of urls - removing old chapter - 2 when updating laast read - changed screen background to zero black - changed spacing after chapter end

--- a/public/reader/src/css/root.css
+++ b/public/reader/src/css/root.css
@@ -48,7 +48,7 @@
 }
 
 .gold-theme-dark {
-    --primary-background: #101010; /* black base */
+    --primary-background: #000000; /* black base */
     --secondary-background: #191919; /* black tint 1 of base from left */
     --primary-foreground: #e0dad0; /* shade 2 from left of tint 1 from right */
     --secondary-foreground: #95918B; /* shade 5 of primary from left */
